--- a/success.html
+++ b/success.html
@@ -15,24 +15,24 @@
 </head>
 
 <body>
-    <nav>
+   <nav>
         <div class="logo">ALLAN JOHNSON
             <p>Personal Life Coach</p>
         </div>
         <div class="content">
-        <ul class="first_ul">
-            <li ><a href="">about</a></li>
-            <li><a href="">services</a></li>
-            <li><a href="">plans</a></li>
-            <li><a href="">blog</a></li>
-            <li><a href="">guides</a></li>
-            <li><a href="">contact</a></li>
-            <li><a href=""><i  class="fa fa-user-circle" aria-hidden="true"></i>log in</a></li>
-        
-             </ul>
-             <i id="bar" class="fa fa-bars" aria-hidden="true"></i>
-        </div> 
-</nav>
+            <ul class="first_ul">
+                <li><a href="">about</a></li>
+                <li><a href="">services</a></li>
+                <li><a href="">plans</a></li>
+                <li><a href="">blog</a></li>
+                <li><a href="">guides</a></li>
+                <li><a href="">contact</a></li>
+                <li><a href=""><i class="fa fa-user-circle" aria-hidden="true"></i>log in</a></li>
+
+            </ul>
+            <i id="bar" class="fa fa-bars" aria-hidden="true"></i>
+        </div>
+    </nav>
     <div class="image">
         <video class="video" autoplay muted loop>
             <source src="images/1118441_4k_Tranquil_Serene_1280x720 (online-video-cutter.com).mp4">
@@ -69,7 +69,7 @@
             <h1 class="help"> how i can help you</h1>
         </div>
         <div class="box">
-         <div class="box1 boxs1"> 
+            <div class="box1 boxs1">
                 <h2 class="head">FREE Consultation</h2>
                 <p class="paragraph">Use this area to describe one of your services.</p>
                 <hr>
@@ -81,9 +81,10 @@
                 <p class="paragraph">Use this area to describe one of your services.</p>
                 <hr>
                 <h4 class="time">1 hr
-<br>
+                    <br>
                     70 US dollars
-                   <br> $70</h4>
+                    <br> $70
+                </h4>
                 <button class="book book2">Book It</button>
             </div>
             <div class="box1 boxs3">
@@ -102,10 +103,10 @@
             </div>
         </div>
         <div class="more">
-        <button class="service">More Services</button>
+            <button class="service">More Services</button>
+        </div>
     </div>
-</div>
- <div class="contact"> 
+    <div class="contact">
         <div class="contact_left">
             <hr>
             <h1> contact </h1>
@@ -117,15 +118,15 @@
             </p>
             <a class="mail" href="mailto:info@mysite.com">info@mysite.com</a>
             <div class="icon">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-            
-            <i class="fa fa-facebook" aria-hidden="true"></i>
-            <i class="fa fa-twitter" aria-hidden="true"></i>
-            <i class="fa fa-youtube-play" aria-hidden="true"></i>
-        </div>
-    </div>  
-         <div class="contact_right">
+               <a href="https://www.instagram.com/"><i class="fa fa-instagram" aria-hidden="true"></i></a> 
 
+               <a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a> 
+               <a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a> 
+               <a href="https://www.youtube.com/channel/UCsJLNEFsn6by-ge60If9iFg"><i class="fa fa-youtube-play" aria-hidden="true"></i></a> 
+            </div>
+        </div>
+        <div class="contact_right">
+            <div class="form">
             <form action="">
                 <label for="">Enter Your Name</label>
                 <input class="name" type="text">
@@ -135,10 +136,10 @@
                 <input class="name" type="text">
                 <label for="">Message</label>
                 <textarea name="" id="textarea" cols="30" rows="10"></textarea>
-                <div class="shivi"><button class="submit">Submit</button>
+                <button class="submit">Submit</button>
             </form>
         </div>
-                </div>
+            </div>
     </div> 
 </body>
 
